// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opens with some wallets without crashing 1`] = `
<ModalPassword
  walletList={
    Array [
      "asdf",
      "demo",
    ]
  }
>
  <div
    className="ModalPassword"
  >
    <CSSTransition
      classNames="open"
      in={true}
      mountOnEnter={true}
      timeout={300}
      unmountOnExit={true}
    >
      <div>
        <div>
          <div
            className="ModalBackground"
            key="background"
            onClick={[Function]}
          />
          <CSSTransition
            classNames="slide"
            in={true}
            timeout={300}
            unmountOnExit={true}
          >
            <div>
              <div>
                <div
                  className="ModalContent"
                  key="content"
                >
                  <header
                    className="ModalContentHeader"
                  >
                    Unlock your wallet.
                  </header>
                  <form>
                    <label
                      htmlFor="address"
                    >
                      Wallet Address
                    </label>
                    <select
                      id="address"
                      onChange={[Function]}
                      value="asdf"
                    >
                      <option
                        key="asdf"
                        value="asdf"
                      >
                        asdf
                      </option>
                      <option
                        key="demo"
                        value="demo"
                      >
                        demo
                      </option>
                    </select>
                    <label>
                      Balances
                    </label>
                    <div
                      className="Balances"
                    >
                      <p
                        className="Balance"
                      >
                        NCT: 
                        0
                      </p>
                      <p
                        className="Balance"
                      >
                        ETH: 
                        0
                      </p>
                    </div>
                    <label
                      htmlFor="password"
                    >
                      Wallet Password
                    </label>
                    <input
                      id="password"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      type="password"
                      value=""
                    />
                    <div
                      className="ModalError"
                    />
                  </form>
                  <p
                    className="ModalMessage"
                  >
                    Your bounty will post in the background. When it has been posted to the chain, it will appear on the sidebar. If there are any errors, we will let you know.
                  </p>
                  <span
                    className="Modal-Button-Bar"
                  >
                    <Button
                      disabled={false}
                      flat={true}
                      onClick={[Function]}
                    >
                      <button
                        className="Button flat"
                        disabled={false}
                        onClick={[Function]}
                      >
                        Unlock
                      </button>
                    </Button>
                    <Button
                      cancel={true}
                      disabled={false}
                      flat={true}
                      onClick={[Function]}
                    >
                      <button
                        className="Button flat-cancel"
                        disabled={false}
                        onClick={[Function]}
                      >
                        Cancel
                      </button>
                    </Button>
                  </span>
                </div>
              </div>
            </div>
          </CSSTransition>
        </div>
      </div>
    </CSSTransition>
  </div>
</ModalPassword>
`;

exports[`opens without crashing 1`] = `
<ModalPassword
  walletList={Array []}
>
  <div
    className="ModalPassword"
  >
    <CSSTransition
      classNames="open"
      in={true}
      mountOnEnter={true}
      timeout={300}
      unmountOnExit={true}
    >
      <div>
        <div>
          <div
            className="ModalBackground"
            key="background"
            onClick={[Function]}
          />
          <CSSTransition
            classNames="slide"
            in={true}
            timeout={300}
            unmountOnExit={true}
          >
            <div>
              <div>
                <div
                  className="ModalContent"
                  key="content"
                >
                  <header
                    className="ModalContentHeader"
                  >
                    Create a wallet
                  </header>
                  <form>
                    <label
                      htmlFor="password"
                    >
                      Wallet Password
                    </label>
                    <input
                      id="password"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      type="password"
                      value=""
                    />
                    <div
                      className="ModalError"
                    />
                  </form>
                  <p
                    className="ModalMessage"
                  >
                    Your bounty will post in the background. When it has been posted to the chain, it will appear on the sidebar. If there are any errors, we will let you know.
                  </p>
                  <span
                    className="Modal-Button-Bar"
                  >
                    <Button
                      disabled={false}
                      flat={true}
                      onClick={[Function]}
                    >
                      <button
                        className="Button flat"
                        disabled={false}
                        onClick={[Function]}
                      >
                        Create
                      </button>
                    </Button>
                    <Button
                      cancel={true}
                      disabled={false}
                      flat={true}
                      onClick={[Function]}
                    >
                      <button
                        className="Button flat-cancel"
                        disabled={false}
                        onClick={[Function]}
                      >
                        Cancel
                      </button>
                    </Button>
                  </span>
                </div>
              </div>
            </div>
          </CSSTransition>
        </div>
      </div>
    </CSSTransition>
  </div>
</ModalPassword>
`;

exports[`renders without crashing 1`] = `
<div
  class="ModalPassword"
>
  <div>
    
  </div>
</div>
`;
